# hybridppo

./: .gitignore  .gitignore.swp  PIPELINE_QUICKSTART.md  README.md  eval_model.py  hparam.yml  load_ppo.py  minari_test.py  minari_transition_dataset_tests.py  pyproject.toml  replay_minari_dataset.py  requirements.txt  test_argparse_validation.py  test_env.py  test_ppo.py  test_ppo_expert.py
.github/: copilot-instructions.md
.github/walker2d/: bc_walker2d_20251223_013703_epoch26 with avg loss 0.0028  bc_walker2d_20251223_013703_epoch27 with avg loss 0.0021  bc_walker2d_20251223_013703_epoch28 with avg loss 0.0016  bc_walker2d_20251223_013703_epoch29 with avg loss 0.0006  bc_walker2d_20251223_013703_epoch30 with avg loss 0.0005  bc_walker2d_20251223_013703_epoch31 with avg loss 0.0003  bc_walker2d_20251223_013703_epoch32 with avg loss -0.0006  bc_walker2d_20251223_013703_epoch33 with avg loss 0.0001  bc_walker2d_20251223_013703_epoch34 with avg loss 0.0018  bc_walker2d_20251223_013703_epoch35 with avg loss -0.0011  bc_walker2d_20251223_013703_epoch36 with avg loss -0.0010  bc_walker2d_20251223_013703_epoch37 with avg loss -0.0014  (+13 more)
hybridppo/: __init__.py  minari_helpers.py  policies.py  ppo_bc.py  ppo_expert.py
scripts/: test_dones_handling.py  test_minari_dones.py
testfiles/: test_vtrace_mixratio.py
training_files/: test_bc_quick.py  test_pipeline_integration.py  test_ppo.py  test_ppo_expert.py  test_train_hybrid_pipeline.py  train_bc_expert.py  train_hybrid_pipeline.py  train_ppo.py  train_ppo_bc.py  train_ppo_expert.py  train_value_only.py
